added setup and alerts

--- a/default/app.conf
+++ b/default/app.conf
@@ -11,6 +11,5 @@ label = heroku
 
 [launcher]
 author = @himynamesdave
-description = 
+description = Heroku application monitoring using Splunk.
 version = 1.0
-
