--- a/default/app.conf
+++ b/default/app.conf
@@ -13,3 +13,7 @@ label = heroku
 author = @himynamesdave
 description = Heroku application monitoring using Splunk.
 version = 1.0
+
+[package]
+id = splunk-heroku-app
+check_for_updates = 1
