--- a/default/app.conf
+++ b/default/app.conf
@@ -11,8 +11,8 @@ label = heroku
 
 [launcher]
 author = @himynamesdave
-description = Heroku application monitoring using Splunk.
-version = 1.0
+description = The Splunk app for Heroku helps guide you through improving the logging functionality of your Heroku app, and how to get these logs into Splunk for analysis. To help you get started this app comes prebuilt with searches powering a number of dashboards and alerts for the ingested log data.
+version = 0.2
 
 [package]
 id = splunk-heroku-app
