--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -1,43 +1,34 @@
-[response time > 5 secs]
+[Response Time > 5 second for 1 hour]
+disabled = 1
 action.email.reportServerEnabled = 0
 action.email.useNSSubject = 1
-alert.digest_mode = 0
-alert.severity = 4
 alert.suppress = 0
 alert.track = 1
-cron_schedule = * * * * *
-dispatch.earliest_time = rt
-dispatch.latest_time = rt
+counttype = number of events
+cron_schedule = 0 * * * *
+description = Response time is slower than 5 seconds for more than 10 visits in the previous 1 hour.
+dispatch.earliest_time = -1h
+dispatch.latest_time = now
 enableSched = 1
-request.ui_dispatch_app = splunk-heroku-app
+quantity = 10
+relation = greater than
+request.ui_dispatch_app = splunk-heroku-app-dev
 request.ui_dispatch_view = search
-search = index=heroku    | regex method="GET|POST|PUT|DELETE"    | eval response_time=tonumber(replace(service, "[ms]", "")) / 1000   | where response_time > 5.0
+search = index=heroku | eval response_time=tonumber(replace(service, "[ms]", "")) / 1000   | where response_time > 5.0
 
-[response time > 3 secs]
+[Errors > 25 Heroku or HTTP every hours]
+disabled = 1
 action.email.reportServerEnabled = 0
 action.email.useNSSubject = 1
-alert.digest_mode = 0
 alert.suppress = 0
 alert.track = 1
-cron_schedule = * * * * *
-dispatch.earliest_time = rt
-dispatch.latest_time = rt
+counttype = number of events
+cron_schedule = 0 * * * *
+dispatch.earliest_time = -1h
+dispatch.latest_time = now
 enableSched = 1
-request.ui_dispatch_app = splunk-heroku-app
+quantity = 25
+relation = greater than
+request.ui_dispatch_app = splunk-heroku-app-dev
 request.ui_dispatch_view = search
-search = index=heroku    | regex method="GET|POST|PUT|DELETE"    | eval response_time=tonumber(replace(service, "[ms]", "")) / 1000   | where response_time > 3.0
-
-[response time > 7 secs]
-action.email.reportServerEnabled = 0
-action.email.useNSSubject = 1
-alert.digest_mode = 0
-alert.severity = 2
-alert.suppress = 0
-alert.track = 1
-cron_schedule = * * * * *
-dispatch.earliest_time = rt
-dispatch.latest_time = rt
-enableSched = 1
-request.ui_dispatch_app = splunk-heroku-app
-request.ui_dispatch_view = search
-search = index=heroku    | regex method="GET|POST|PUT|DELETE"    | eval response_time=tonumber(replace(service, "[ms]", "")) / 1000   | where response_time > 7.0
+search = index=heroku at=error OR status=5*
